styles: Preferences moved to homepage - remove header links - add preference settings to home - combine level 5 & 6

--- a/src/_includes/layouts/base-layout.njk
+++ b/src/_includes/layouts/base-layout.njk
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-complexity-preference="IIIIII" data-visited-preference="false" data-theme-preference="light">
+<html lang="en" data-complexity-preference="IIIII" data-visited-preference="false" data-theme-preference="light">
     {% include "partials/site-head.njk" %}
     <body>
         {% include "partials/site-header.njk" %}
