--- a/src/_includes/partials/preference-complexity.njk
+++ b/src/_includes/partials/preference-complexity.njk
@@ -1,24 +1,21 @@
 <template class="complexity-template">
     <form class="complexity-form measured-container">
-        <fieldset >
+        <fieldset data-layout="stack" data-props="space:2xs">
             <legend>Complexity</legend>
             <label>
-                <input type="radio" name="complexity" value="I"/> Level 1
+                <input type="radio" name="complexity" value="I"/> Level 1 (+Reset)
             </label>
             <label>
-                <input type="radio" name="complexity" value="II"/> Level 2
+                <input type="radio" name="complexity" value="II"/> Level 2 (+Typography)
             </label>
             <label>
-                <input type="radio" name="complexity" value="III"/> Level 3
+                <input type="radio" name="complexity" value="III"/> Level 3 (+White Space)
             </label>
             <label>
-                <input type="radio" name="complexity" value="IIII"/> Level 4
+                <input type="radio" name="complexity" value="IIII"/> Level 4 (+Colors)
             </label>
             <label>
-                <input type="radio" name="complexity" value="IIIII"/> Level 5
-            </label>
-            <label>
-                <input type="radio" name="complexity" value="IIIIII"/> Level 6
+                <input type="radio" name="complexity" value="IIIII"/> Level 5 (+Richer visual style)
             </label>
         </fieldset>
     </form>
