--- a/src/_includes/partials/site-header.njk
+++ b/src/_includes/partials/site-header.njk
@@ -2,10 +2,10 @@
     <a data-font="sans-serif" data-props="y:center" data-button="text" href="/">
         <b>{{ meta.site_name }}</b>
     </a>
-    <aside data-layout="cluster" data-props="y:center">
+    {# <aside data-layout="cluster" data-props="y:center"> #}
         {# <a data-button="link" href="/decision-trees">DT</a> #}
-        <a data-button="link" href="/style-guide">Style Guide</a>
-        <a data-button="link" href="/preferences">Preferences</a>
+        {# <a data-button="link" href="/style-guide">Style Guide</a> #}
+        {# <a data-button="link" href="/preferences">Preferences</a> #}
         {# {% include "partials/site-theme-toggle.njk" %} #}
-    </aside>
+    {# </aside> #}
 </header>
