--- a/src/_includes/partials/story-card-entry.njk
+++ b/src/_includes/partials/story-card-entry.njk
@@ -1,6 +1,6 @@
 <article>
     <a class="headline-entry" data-font="sans-serif" itemprop="url" data-button="link" href="/{{ entry.slug }}" data-icon="{{entry.icon}}">
-        <span aria-hidden="true">
+        <span data-font="emoji" aria-hidden="true">
             {{entry.icon}}
         </span>
         <b>
