--- a/src/content/preferences-page.njk
+++ b/src/content/preferences-page.njk
@@ -3,7 +3,7 @@ title: Preferences
 tags:
   - webpage
 layout: layouts/nested-page-layout.njk
-permalink: false
+permalink: /preferences/
 eleventyComputed:
   description: "Set your preferences"
   eleventyNavigation:
