fix: Generate Preference page

--- a/src/_includes/partials/story-card-entry.njk
+++ b/src/_includes/partials/story-card-entry.njk
@@ -1,5 +1,5 @@
 <article>
-    <a class="headline-entry" data-font="sans-serif" itemprop="url" data-button="link" href="/{{ entry.slug }}" data-icon="{{entry.icon}}">
+    <a class="headline-entry" data-heading="3" data-font="sans-serif" itemprop="url" data-button="link" href="/{{ entry.slug }}" data-icon="{{entry.icon}}">
         <span data-font="emoji" aria-hidden="true">
             {{entry.icon}}
         </span>
@@ -7,7 +7,4 @@
             {{ entry.name }}
         </b>
     </a>
-    <p>
-        {{entry.excerpt}}
-    </p>
 </article>
