--- a/src/content/preferences-page.njk
+++ b/src/content/preferences-page.njk
@@ -3,14 +3,16 @@ title: Preferences
 tags:
   - webpage
 layout: layouts/nested-page-layout.njk
-permalink: false
+permalink: /preferences/
 eleventyComputed:
   description: "Set your preferences"
   eleventyNavigation:
     key: Preferences
-    parent: All
+    parent: About
 ---
 
 <h1>Preferences</h1>
+
+You can select the visual complexity of this website.  
 
 {% include "partials/preference-complexity.njk"%}
