--- a/src/content/home-page.njk
+++ b/src/content/home-page.njk
@@ -2,6 +2,7 @@
 layout: layouts/home-layout.njk
 hero_title: Selection of research findings related to web development
 hero_description: Frontend Stories is a collection of research findings and insights about web development.
+showHeader: true
 pagination: 
     data: collections.categoriesAndAll
     size: 1
