feat: Improve DT content display rules

--- a/src/content/decision-trees/images-alt-text.njk
+++ b/src/content/decision-trees/images-alt-text.njk
@@ -4,10 +4,10 @@ tags:
   - webpage
   - decision-tree
 layout: layouts/nested-page-layout.njk
-permalink: /decision-trees/image-alt-text/
+permalink: /decision-trees/image-alt-text/index.html
 eleventyComputed:
   eleventyNavigation:
-    key: Decision Trees
+    key: Interactive alt decision tree
     parent: All
 ---
 
