--- a/src/_includes/partials/decision-tree.njk
+++ b/src/_includes/partials/decision-tree.njk
@@ -70,7 +70,8 @@
   }
   {% else %}
   {# When pevious leaves are set to Yes, hide the current yes&no content #}
-  {% set nextLeaf = ":is(ul#control_"+depth+"_no_content, ul#control_"+depth+"_yes_content)" if isLastLeaf else "fieldset#fieldset_"+(depth + 1)  %}
+  {# {% set nextLeaf = ":is(ul#control_"+depth+"_no_content, ul#control_"+depth+"_yes_content)" if loop.last else "fieldset#fieldset_"+(depth + 1)  %} #}
+  {% set nextLeaf = ":is(ul#control_"+depth+"_no_content, ul#control_"+depth+"_yes_content, fieldset#fieldset_"+(depth + 1)+")"  %}
 
   /* If YES checked in prior - {{i}} question, this cannot show */
   fieldset#fieldset_{{ depth - 1 - i }}:has(#control_{{ depth - 1 - i }}_yes:checked) ~ {{nextLeaf}} {
