--- a/src/assets/styles/_colors.css
+++ b/src/assets/styles/_colors.css
@@ -8,10 +8,11 @@
     var(--primary-saturation),
     var(--primary-lightness)
   );
-  --color-light: #fffcf2;
-  --color-light-accent: hsl(32, 35%, 88%);
-  --color-dark-accent: #735d43;
-  --color-dark: #433523;
+
+  --color-light: #ECE1CB;
+  --color-light-accent: hsl(32, 35%, 80%);
+  --color-dark-accent: #735D43;
+  --color-dark: hsl(33, 32%, 20%);
 
   --color-focus: var(--color-dark);
   --color-focus-shadow: var(--color-dark-accent);
