feat: Add interactive trees description

--- a/src/content/decision-trees/images-alt-text.njk
+++ b/src/content/decision-trees/images-alt-text.njk
@@ -12,5 +12,6 @@ eleventyComputed:
 ---
 
 <h1>{{title}}</h1>
+<i>Uses CSS :has instead of JS for interactivity</i>
 {% set leaf = trees.images %}
 {% include "partials/decision-tree.njk" %}
