WIP: Add informative Messaging Tree

--- a/src/content/home-page.njk
+++ b/src/content/home-page.njk
@@ -34,8 +34,13 @@ eleventyComputed:
     {% endfor -%}
 
     <h2>Interactive decision trees</h2>
-    <p>Decision trees are a simple and effective tool for making design choices in user interfaces.</p>
+    <p>Decision trees are a simple and effective tool for making design choices in user interfaces.
+        Here we check how far we can go to generate decision trees with plain HTML+CSS.
+    </p>
     <a class="headline-entry" data-heading="6" data-font="sans-serif" itemprop="url" data-button="link" href="/decision-trees/image-alt-text/index.html" data-icon="{{ entry.icon }}">
         Images Alternative text
+    </a>
+    <a class="headline-entry" data-heading="6" data-font="sans-serif" itemprop="url" data-button="link" href="/decision-trees/informative-messaging/index.html" data-icon="{{ entry.icon }}">
+        Informative Messaging
     </a>
 </section>
